moved isMacOS to App.js, fixed little z-index bug

--- a/src/components/ShortcutsModal.css
+++ b/src/components/ShortcutsModal.css
@@ -8,7 +8,7 @@
   color: var(--theme-content-color1);
 }
 
-.keyboard {
+.mac .keystroke {
   border-style: solid;
   border-width: 1px;
   border-radius: 3px;
